--- a/package.json
+++ b/package.json
@@ -8,14 +8,39 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "dayjs": "^1.11.2",
+    "echarts": "^5.3.2",
+    "file-saver": "^2.0.5",
+    "i": "^0.3.7",
+    "iview": "^2.14.3",
+    "js-cookie": "^3.0.1",
+    "katex": "^0.15.6",
+    "less": "^3.13.1",
+    "less-loader": "^5.0.0",
+    "nanoid": "^3.3.4",
+    "npm": "^8.12.1",
+    "nprogress": "^0.2.0",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "tar-simditor": "^3.0.5",
+    "tar-simditor-markdown": "^1.2.3",
+    "vue": "^2.6.11",
+    "vue-count-to": "^1.0.13",
+    "vue-cropper": "^0.5.8",
+    "vue-echarts": "^6.0.3",
+    "vue-router": "3",
+    "vuex": "^3.6.2",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
+    "@vue/composition-api": "^1.6.2",
     "babel-eslint": "^10.1.0",
+    "cos-js-sdk-v5": "^1.3.8",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
